--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: # Allows manual triggering
+      - master
+  workflow_dispatch:
 
 jobs:
   build_and_deploy:
@@ -28,7 +29,7 @@ jobs:
           docker build -t $ECR_REGISTRY/payment-gateway:$IMAGE_TAG .
           docker push $ECR_REGISTRY/payment-gateway:$IMAGE_TAG
 
-      - name: Deploy to Amazon ECS
+      - name: Render ECS task definition
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: ecs-task-definition.json
