--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -22,16 +22,20 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-    
-
       - name: Build Docker image
         run: docker build -t payment-gateway .
 
-      - name: Log in to Docker Hub
+      - name: Log in to Amazon ECR
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          ecr: auto
+          logout: true
+          registry: ${{ secrets.AWS_ECR_REGISTRY }}
+          username: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Tag Docker image
+        run: docker tag payment-gateway:latest ${{ secrets.AWS_ECR_REGISTRY }}/payment-gateway:latest
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/payment-gateway:latest
+        run: docker push ${{ secrets.AWS_ECR_REGISTRY }}/payment-gateway:latest
